cleaned up astro styles, ensured scrollbar is always visible, the selected item in the list is always visible when a marker is selected-- it will scroll to the selected item, maptype is always highlighted, added a divider in the map controls, and cleaned up the responsive design

--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,11 @@ html, body{
   margin: 0;
   padding: 0;
   display: flex;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .wholePage {
   height: 100%;
-  /*height: 690px;*/
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -24,6 +23,7 @@ html, body{
   width: 60px;
   align-items: center;
 }
+
 #map {
   height: 100%;
   width: 100%;
@@ -48,7 +48,7 @@ html, body{
 }
 
 h1 {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 300;
   color: #ffffff;
   text-align: center;
@@ -97,6 +97,7 @@ html, body{
   width: 60px;
   align-items: center;
 }
+
 #map {
   height: 100%;
   width: 100%;
@@ -113,6 +114,10 @@ html, body{
   padding-top: 24px;
 }
 
+#root {
+  width: 100%;
+}
+
 .app-window {
   display: flex;
   flex-direction: row;
@@ -120,8 +125,12 @@ html, body{
   width: 100%;
 }
 
+.app-title {
+  padding-right: 24px;
+}
+
 h1 {
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 300;
   color: #ffffff;
   text-align: center;
