--- a/src/components/ZoomControl.css
+++ b/src/components/ZoomControl.css
@@ -50,6 +50,14 @@
   box-shadow: var( --controlBoxShadow, 0 2px 4px rgba(0, 0, 0, 0.14), 0 3px 4px rgba(0, 0, 0, 0.12), 0 1px 5px rgba(0, 0, 0, 0.2) );
 }
 
+.divider {
+  width: 40px;
+  height: 10px;
+  background-image: url(../images/zoomdivider.svg);
+  background-repeat: no-repeat;
+  margin-top: 32px;
+}
+
 .control-flatmap {
   cursor: pointer;
   text-align: center;
@@ -76,6 +84,19 @@
   box-shadow: var( --controlBoxShadow, 0 2px 4px rgba(0, 0, 0, 0.14), 0 3px 4px rgba(0, 0, 0, 0.12), 0 1px 5px rgba(0, 0, 0, 0.2) );
 }
 
+.control-flatmap-select {
+  cursor: pointer;
+  text-align: center;
+  width: 40px;
+  height: 40px;
+  background-image: url(../images/flatmaphover.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 24px;
+  margin-right: 24px;
+  box-shadow: var( --controlBoxShadow, 0 2px 4px rgba(0, 0, 0, 0.14), 0 3px 4px rgba(0, 0, 0, 0.12), 0 1px 5px rgba(0, 0, 0, 0.2) );
+}
+
 .control-satmap {
   cursor: pointer;
   text-align: center;
@@ -90,6 +111,19 @@
 }
 
 .control-satmap:hover {
+  cursor: pointer;
+  text-align: center;
+  width: 40px;
+  height: 40px;
+  background-image: url(../images/satmaphover.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 12px;
+  margin-right: 24px;
+  box-shadow: var( --controlBoxShadow, 0 2px 4px rgba(0, 0, 0, 0.14), 0 3px 4px rgba(0, 0, 0, 0.12), 0 1px 5px rgba(0, 0, 0, 0.2) );
+}
+
+.control-satmap-select {
   cursor: pointer;
   text-align: center;
   width: 40px;
